refactor(CreateCarsService): UnmodifiableList를 반환하도록 수정