@@ -2,7 +2,6 @@ package racingcar.service;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import racingcar.domain.Car;
 import racingcar.domain.Cars;
@@ -18,7 +17,7 @@ public class CreateCarsService {
 	private List<Car> convertStringArrToCarList(String[] strArr){
 		return Arrays.stream(strArr)
 						.map(this::createCar)
-						.collect(Collectors.toList());
+						.toList();
 	}
 	
 	private Car createCar(String carName) {
